{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 187,
  "lineage": "67de444c-7a5f-968d-cbfa-276aa1791c81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:security-group/sg-0a23a870050a1b52b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a23a870050a1b52b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2021102823485274780000000b",
            "name_prefix": "all_worker_management",
            "owner_id": "574816112352",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:security-group/sg-02dffd78665b8c6d4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02dffd78665b8c6d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2021102823485203460000000a",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "574816112352",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "kube_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-logging",
            "metadata": [
              {
                "generation": 0,
                "name": "kube-logging",
                "resource_version": "981",
                "uid": "30596176-1134-4d90-b606-795d7b1ba49e"
              }
            ]
          },
          "dependencies": [
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_vpc.this",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_partition.current",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "admin_page",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/admin-page",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "admin-page"
                },
                "name": "admin-page",
                "namespace": "default",
                "resource_version": "991",
                "uid": "2492e84a-db5b-4490-8fd1-36a121cf76b3"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.241.187",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "admin-page"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_partition.current",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.data.http.wait_for_cluster",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.vpc.aws_subnet.private",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.workers",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "conductor",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/conductor",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "conductor"
                },
                "name": "conductor",
                "namespace": "default",
                "resource_version": "1005",
                "uid": "54b5078c-d739-4d29-859d-79a74879c63e"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.169.137",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "conductor"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dbmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/dbmanager",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "dbmanager"
                },
                "name": "dbmanager",
                "namespace": "default",
                "resource_version": "3719",
                "uid": "22fac315-9487-4842-a2f4-8c2d63c45603"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.195.68",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "dbmanager"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.aws_partition.current",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.http.wait_for_cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "elasticsearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "kube-logging/elasticsearch",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "elasticsearch"
                },
                "name": "elasticsearch",
                "namespace": "kube-logging",
                "resource_version": "3685",
                "uid": "29a90f32-a4ec-439e-a04d-2b2c129f108c"
              }
            ],
            "spec": [
              {
                "cluster_ip": "None",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "rest",
                    "node_port": 0,
                    "port": 9200,
                    "protocol": "TCP",
                    "target_port": "9200"
                  },
                  {
                    "name": "inter-node",
                    "node_port": 0,
                    "port": 9300,
                    "protocol": "TCP",
                    "target_port": "9300"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "elasticsearch"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.data.http.wait_for_cluster",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.vpc.aws_vpc.this",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "data.aws_availability_zones.available",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "kube-logging/kibana",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "kibana"
                },
                "name": "kibana",
                "namespace": "kube-logging",
                "resource_version": "998",
                "uid": "f9e57a92-ea4a-4e92-b0dc-a6d342bc6678"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.162.34",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 5601,
                    "protocol": "TCP",
                    "target_port": "5601"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "kibana"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_vpc.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "data.aws_availability_zones.available",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "landing_page",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/landing-page",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "landing-page"
                },
                "name": "landing-page",
                "namespace": "default",
                "resource_version": "986",
                "uid": "7d0606b9-4266-4aa5-a1ba-4f08e682c7b9"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.137.41",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "landing-page"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "resources",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/resources",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "resources"
                },
                "name": "resources",
                "namespace": "default",
                "resource_version": "3688",
                "uid": "8263074c-40d0-4ddf-85bb-925b10e944ce"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.226.13",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "resources"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "data.aws_availability_zones.available",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service_page",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/service-page",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "service-page"
                },
                "name": "service-page",
                "namespace": "default",
                "resource_version": "1091",
                "uid": "428c269e-3175-4d9f-bd7f-e6c53092775e"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.203.226",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "service-page"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.data.http.wait_for_cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "signalling",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/signalling",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "signalling"
                },
                "name": "signalling",
                "namespace": "default",
                "resource_version": "1138",
                "uid": "37f45874-91ad-4037-aa08-cf7a3784395d"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.22.141",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "signalling"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.eks.data.http.wait_for_cluster",
            "data.aws_availability_zones.available",
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "slavemanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/slavemanager",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "slavemanager"
                },
                "name": "slavemanager",
                "namespace": "default",
                "resource_version": "982",
                "uid": "9e9218a0-3093-45c5-af29-c53ea691c9c9"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.204.223",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "slavemanager"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.vpc.aws_vpc.this",
            "data.aws_availability_zones.available",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.workers",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.vpc.aws_subnet.private",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.http.wait_for_cluster",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "1060",
                "uid": "5a7e9606-d1e6-42c6-bcb9-70dc0f96f38c"
              }
            ]
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceControllerPolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group_rule.cluster_private_access_sg_source",
            "module.eks.data.aws_partition.current",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_private_access_cidrs_source",
            "module.eks.data.http.wait_for_cluster",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:security-group/sg-0221772b8a54a62e2",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0221772b8a54a62e2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b02f46bbd836e64a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "thinkmay-eks2021102823485315560000000d",
            "name_prefix": "thinkmay-eks",
            "owner_id": "574816112352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thinkmay-eks-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "thinkmay-eks-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:security-group/sg-0b02f46bbd836e64a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b02f46bbd836e64a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0221772b8a54a62e2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0221772b8a54a62e2"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "thinkmay-eks2021102823485284530000000c",
            "name_prefix": "thinkmay-eks",
            "owner_id": "574816112352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thinkmay-eks-eks_worker_sg",
              "kubernetes.io/cluster/thinkmay-eks": "owned"
            },
            "tags_all": {
              "Name": "thinkmay-eks-eks_worker_sg",
              "kubernetes.io/cluster/thinkmay-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1955535329",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0221772b8a54a62e2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-800772279",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0221772b8a54a62e2",
            "self": false,
            "source_security_group_id": "sg-0b02f46bbd836e64a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2323270045",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b02f46bbd836e64a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1545271253",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b02f46bbd836e64a",
            "self": false,
            "source_security_group_id": "sg-0221772b8a54a62e2",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2249281258",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b02f46bbd836e64a",
            "self": false,
            "source_security_group_id": "sg-0221772b8a54a62e2",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3121004342",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b02f46bbd836e64a",
            "self": false,
            "source_security_group_id": "sg-0b02f46bbd836e64a",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00e18f8532c5c9ade",
            "domain": "vpc",
            "id": "eipalloc-0dd5725ccd5a65d38",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00145ba190ba87df4",
            "private_dns": "ip-10-0-4-142.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.142",
            "public_dns": "ec2-13-228-66-121.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.66.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "test-vpc-ap-southeast-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:internet-gateway/igw-00009b063339b697c",
            "id": "igw-00009b063339b697c",
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd5725ccd5a65d38",
            "connectivity_type": "public",
            "id": "nat-0856a49301c36552b",
            "network_interface_id": "eni-00145ba190ba87df4",
            "private_ip": "10.0.4.142",
            "public_ip": "13.228.66.121",
            "subnet_id": "subnet-0192ee1754aef4bb4",
            "tags": {
              "Name": "test-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "test-vpc-ap-southeast-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c121ddd46b16e2b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0856a49301c36552b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c121ddd46b16e2b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00009b063339b697c",
            "id": "r-rtb-076d5c3da5300dcda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076d5c3da5300dcda",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:route-table/rtb-0c121ddd46b16e2b7",
            "id": "rtb-0c121ddd46b16e2b7",
            "owner_id": "574816112352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0856a49301c36552b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-private"
            },
            "tags_all": {
              "Name": "test-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:route-table/rtb-076d5c3da5300dcda",
            "id": "rtb-076d5c3da5300dcda",
            "owner_id": "574816112352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00009b063339b697c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-public"
            },
            "tags_all": {
              "Name": "test-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54da106d5bc5799",
            "route_table_id": "rtb-0c121ddd46b16e2b7",
            "subnet_id": "subnet-0192edd13922d769e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0219e71a4c7a3f69e",
            "route_table_id": "rtb-0c121ddd46b16e2b7",
            "subnet_id": "subnet-04778e716028aac08"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2a4712eab7a276",
            "route_table_id": "rtb-0c121ddd46b16e2b7",
            "subnet_id": "subnet-0de9b76ecccd024a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94ec87f3bec80df",
            "route_table_id": "rtb-076d5c3da5300dcda",
            "subnet_id": "subnet-0192ee1754aef4bb4"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2eb6bdbe970007a",
            "route_table_id": "rtb-076d5c3da5300dcda",
            "subnet_id": "subnet-0648bf1b19544677c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d51665f69ce3f2f3",
            "route_table_id": "rtb-076d5c3da5300dcda",
            "subnet_id": "subnet-0c13ba222e0c61699"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:subnet/subnet-0192edd13922d769e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0192edd13922d769e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:subnet/subnet-04778e716028aac08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04778e716028aac08",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:subnet/subnet-0de9b76ecccd024a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0de9b76ecccd024a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "test-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:subnet/subnet-0192ee1754aef4bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0192ee1754aef4bb4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:subnet/subnet-0648bf1b19544677c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0648bf1b19544677c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:subnet/subnet-0c13ba222e0c61699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c13ba222e0c61699",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc-public-ap-southeast-1c",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-vpc-public-ap-southeast-1c",
              "kubernetes.io/cluster/thinkmay-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-039d68a9e7f47ac31"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:574816112352:vpc/vpc-039d68a9e7f47ac31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e22a33b1dcdae998",
            "default_route_table_id": "rtb-0ad3bd4cca13c2259",
            "default_security_group_id": "sg-025d983ddff43ad36",
            "dhcp_options_id": "dopt-07b0fb0424ea5f54d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-039d68a9e7f47ac31",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ad3bd4cca13c2259",
            "owner_id": "574816112352",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}